[package]
name = "amzn_ion"
version = "0.1.0"
authors = ["Zack Slayton <zslayton@amazon.com>"]

[dependencies]
failure = "~0.1"
failure_derive = "~0.1"
bytes = "0.4.9"
#log="0.4.3"
#env_logger="0.5.12"
smallvec="0.6.4"
#memmap="0.6.2"
chrono = "0.4"
num-bigint = "0.2"
bigdecimal = "0.0.14"
lazy_static = "1.1.0"
wasm-bindgen = "0.2"

[profile.release]
debug = true
lto = true
codegen-units = 1